# msq-pay-dapp

./: Cargo.toml  canister_ids.json  dfx.json
backend/src/can_invoice_history/: Cargo.toml  can.did
backend/src/can_invoice_history/src/: actor.rs
backend/src/can_payment_hub/: Cargo.toml  can.did
backend/src/can_payment_hub/src/: actor.rs  timers.rs  utils.rs
backend/src/payment_hub_types/: Cargo.toml
backend/src/payment_hub_types/src/: lib.rs
backend/src/shared/: Cargo.toml
backend/src/shared/src/: e8s.rs  env.rs  lib.rs  utils.rs
backend/src/shared/src/exchange_rates/: api.rs  state.rs  types.rs
backend/src/shared/src/invoice_history/: api.rs  state.rs  types.rs
backend/src/shared/src/invoices/: api.rs  state.rs  types.rs
backend/src/shared/src/payment_hub/: state.rs
backend/src/shared/src/shops/: api.rs  state.rs  types.rs
backend/src/shared/src/supported_tokens/: api.rs  state.rs  types.rs
frontend/: node.d.ts  package.json  pnpm-lock.yaml
frontend/src/: App.tsx
frontend/src/components/avatar/: index.tsx
frontend/src/components/balance-of/: index.tsx
frontend/src/components/btn/: index.tsx
frontend/src/components/create-shop-form/: index.tsx
frontend/src/components/header/: index.tsx
frontend/src/components/icon/: index.tsx
frontend/src/components/img-uploader/: index.tsx
frontend/src/components/logo/: index.tsx
frontend/src/components/profile/: profile.tsx
frontend/src/components/shop/: index.tsx
frontend/src/components/text-input/: index.tsx
frontend/src/components/transfer-ownership-modal/: index.tsx
frontend/src/pages/me/: index.tsx
frontend/src/pages/shops/: index.tsx
frontend/src/pages/shops/register/: index.tsx
frontend/src/store/: auth.tsx  shops.tsx  tokens.tsx
frontend/src/utils/: backend.ts  math.ts  security.ts
scripts/: before-build.sh  deploy.backend.sh  extract-did.sh  generate-bind.sh
