[workspace]
members = [
    "backend/src/can_payment_hub",
    "backend/src/can_invoice_history",
    "backend/src/shared",
    "backend/src/payment_hub_types",
]
resolver = "2"

[profile.release]
codegen-units = 1
strip = true
lto = true
opt-level = 'z'
panic = 'abort'

[workspace.dependencies]
candid = "0.10"
serde = "1.0"
ic-cdk = "0.13"
ic-cdk-timers = "0.7"
icrc-ledger-types = "0.1"
num-bigint = "0.4"
chrono = { version = "0.4", default-features = false }
futures = { version = "0.3", default-features = false }
sha2 = "0.10"
lazy_static = "1.4"
ic-xrc-types = "1.2"
ic-e8s = "0.1"
