[package]
name = "payment_hub"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]
path = "src/actor.rs"

[dependencies]
shared = { path = "../shared" }
candid = { workspace = true }
serde = { workspace = true }
ic-cdk = { workspace = true }
ic-cdk-timers = { workspace = true }
icrc-ledger-types = { workspace = true }
num-bigint = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
